--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/yakisoba_chicken.html">Yakisoba Chicken</a>
   </body>
 </html>
