--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/yakisoba_chicken.html">Yakisoba Chicken</a>
+    <ul>
+      <li>
+        <a href="./recipes/yakisoba_chicken.html">Yakisoba Chicken</a>
+      </li>
+      <li>
+        <a href="./recipes/apple_cider.html">Apple Cider</a>
+      </li>
+      <li>
+        <a href="./recipes/stroganoff.html">Beef Stroganoff</a>
+      </li>
+      
+    </ul>
+    
   </body>
 </html>
