Add images and center text

--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes Home</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
-      <li>
+    <div class="recipes">
+      <div class="yakisoba">
+        <img src="./images/chicken.jpg" alt="Picture of yakisoba" width="50"></src>
         <a href="./recipes/yakisoba_chicken.html">Yakisoba Chicken</a>
-      </li>
-      <li>
+      </div>
+      <div class="apple-cider">
+        <img src="./images/apple-cider.jpg" alt="Picture of apple cider" width="50">
         <a href="./recipes/apple_cider.html">Apple Cider</a>
-      </li>
-      <li>
+      </div>
+      <div class="stroganoff">
+        <img src="./images/stroganoff.jpg" alt="Picture of beef stroganoff" width="50">
         <a href="./recipes/stroganoff.html">Beef Stroganoff</a>
-      </li>
-      
-    </ul>
+      </div>
+    </div>
     
   </body>
 </html>
