--- a/recipes/apple_cider.html
+++ b/recipes/apple_cider.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Apple Cider</h1>
-  <img src="../images/homemade-apple-cider-allrecipes-video-4x3-2e3fae6d7611434aa2c6c7fd6a470eeb.jpg" alt="Photo of a cup of apple cider with a cinnamon stick on top" width="300">
+  <img src="../images/apple-cider.jpg" alt="Photo of a cup of apple cider with a cinnamon stick on top" width="300">
 
   <h3>Description</h3>
     <p>Found a drink recipe playing the outer worlds</p>  
