--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Beef Stroganoff Noodles</h1>
-<img src="../images/stroganoff.jpg" alt="This beef stroganoff doesn't actually look good">
+<img src="../images/stroganoff.jpg" alt="This beef stroganoff doesn't actually look good" width="300">
 
 <h3>Description</h3>
 <p>
